fix banner on mobile

--- a/style.css
+++ b/style.css
@@ -473,7 +473,7 @@ label {
 /* banner instead of hero */
 .home-banner {
     width: 100%;
-    height: 450px; /* adjust height as needed */
+    height: 40vh; /* fill 40% of page */
     background-image: url("images/background3.jpeg");
     background-size: cover;
     background-position: center;
@@ -491,6 +491,7 @@ label {
     transform: translate(-50%, -50%);
     opacity: 0.9;
     size: auto;
+    max-width: 100%
 }
 
 /* Base button style */
